@@ -47,14 +47,27 @@ public:
     virtual bool reload();
     DcpAppletMetadata* appletMetadata (int pos);
 
+public slots:
+    void startLoading();
+
+signals:
+    //! emitted after loading the applets has finished
+    void loadingFinished();
+
 protected:
     virtual void createContents();
+    void loadApplet(QGraphicsObject* item);
+    void timerEvent(QTimerEvent* event);
 
 private:
     void markAllInactive();
 
     const DcpCategoryInfo  *m_CategoryInfo;
     friend class Ut_DcpAppletButtons;
+
+    // shows the progress of the applet loading process:
+    int m_AppletLoaderTimer;
+    int m_AppletLoaderPos;
 };
 
 #endif
