@@ -60,3 +60,7 @@ DcpAppletMetadata* DcpAppletButtons::appletMetadata(int)
     return 0;
 }
 
+void DcpAppletButtons::timerEvent(QTimerEvent*) {}
+
+void DcpAppletButtons::startLoading () {}
+
