@@ -80,3 +80,8 @@ DcpCategoryComponent::getItemCount ()
     return 0;
 }
 
+void
+DcpCategoryComponent::startLoading ()
+{
+}
+
