@@ -1,0 +1,5 @@
+#include <QObject>
+
+// this disables the timer event to run automatically
+int QObject::startTimer ( int ) { return 1; }
+
